# scribe

./: AGENTS.md  LICENSE  README.md  dune-project  scribe.opam
.github/: dependabot.yml
.github/workflows/: ci.yml
lib/: dune  scribe.ml  scribe.mli
lib/json/: dune  scribe_json.mli
lib/sinks/: dune  json.ml  json.mli  noop.ml  noop.mli  scribe_sinks.ml  scribe_sinks.mli
test/: dune  test_scribe.ml
